kubernetes/insurance-app/insurance-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insurance-api
  namespace: insurance-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: insurance-api
  template:
    metadata:
      labels:
        app: insurance-api
    spec:
      containers:
      - name: insurance-api
        image: 920310277638.dkr.ecr.us-east-2.amazonaws.com/insurance-api:13-4dda80c
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
